--- a/package.json
+++ b/package.json
@@ -3,20 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull && next dev --turbopack",
+    "build": "i18nexus pull && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.15.1",
+    "@formatjs/intl": "^2.10.9",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.0.1",
+    "@opentelemetry/api": "^1.9.0",
+    "flowbite": "^2.5.2",
+    "i18nexus-cli": "^3.5.0",
+    "moment": "^2.30.1",
+    "next": "15.0.1",
+    "next-i18n-router": "^5.5.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-intl": "^6.8.1",
+    "react-paginate": "^8.2.0",
+    "rss": "^1.2.2",
+    "sharp": "^0.33.5",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "eslint-config-next": "15.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
