--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "i18nexus pull && next dev --turbopack",
     "build": "i18nexus pull && next build",
     "start": "i18nexus pull && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "node postinstall.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.3.1",
     "@elastic/elasticsearch": "^8.15.1",
     "@formatjs/intl": "^2.10.9",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -16,9 +18,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.10",
     "@next/third-parties": "^15.0.1",
     "@opentelemetry/api": "^1.9.0",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "axios": "^1.7.7",
+    "ckeditor5": "^43.2.0",
     "flowbite": "^2.5.2",
+    "fs-extra": "^11.2.0",
     "i18nexus-cli": "^3.5.0",
     "moment": "^2.30.1",
     "next": "15.0.1",
@@ -29,7 +36,8 @@
     "react-paginate": "^8.2.0",
     "rss": "^1.2.2",
     "sharp": "^0.33.5",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tinymce": "^7.4.1"
   },
   "devDependencies": {
     "eslint": "^8",
