--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "i18nexus pull && next dev --turbopack",
     "build": "i18nexus pull && next build",
     "start": "i18nexus pull && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "node ./postinstall.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.1",
@@ -33,7 +34,8 @@
     "react-paginate": "^8.2.0",
     "rss": "^1.2.2",
     "sharp": "^0.33.5",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tinymce": "^7.4.1"
   },
   "devDependencies": {
     "eslint": "^8",
