--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@opentelemetry/api": "^1.9.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.7",
+    "docx": "^9.0.3",
     "flowbite": "^2.5.2",
+    "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "i18nexus-cli": "^3.5.0",
     "moment": "^2.30.1",
     "next": "15.0.1",
     "next-i18n-router": "^5.5.1",
+    "path": "^0.12.7",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-intl": "^6.8.1",
